<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinIt</string>
    <string name="cancel_string">Cancel</string>

    <!-- ActionBar/Menu Strings -->
    <string name="menu_search">Search a location</string>
    <string name="menu_create_note">Create Note</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_location">Edit Note Location</string>
    <string name="menu_edit_note">Edit Note Info</string>
    <string name="menu_delete_note">Delete Note</string>
    <string name="menu_about">About</string>

    <!-- Login Screen Strings -->
    <string name="login_enter_username">Username</string>
    <string name="login_enter_password">Password</string>
    <string name="login_log_in">Log In</string>
    <string name="login_fb_log_in">Sign in with Facebook</string>
    <string name="login_sign_up">Sign Up!</string>
    <string name="login_forgot_password">Forgot Password?</string>

    <!-- Signup Screen Strings -->
    <string name="signup_sign_up">Sign Up</string>
    <string name="signup_pick_photo">Pick Profile Photo</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email (we don\'t spam)</string>
    <string name="signup_password">Password (min. 6 characters)</string>
    <string name="signup_confirm_password">Confirm Password</string>

    <!-- Main Screen Strings -->
    <string name="main_all_notes">All Notes</string>
    <string name="main_your_notes">Your Notes</string>

    <!-- Create Note Screen Strings -->
    <string name="create_note_enter_title">Enter a Note Title</string>
    <string name="create_note_enter_body">Enter Note Details</string>
    <string name="create_note_share">Share</string>
    <string name="create_note_title_character_limit">80</string>
    <string name="create_note_private">Private</string>
    <string name="create_note_public">Public</string>
    <string name="create_note_who_can_see_this">Make this note: </string>
    
    <!-- Display Note Screen Strings -->
    <string name="display_note_be_the_first">Be the first to like this!</string>
    
    <!-- Comments Screen Strings -->
    <string name="comments_write_a_comment">Write a comment...</string>
    <string name="comments_send">Send</string>
    
    <!-- Likes Screen Strings -->
    <string name="likes_people_who_like_this">People who like this</string>

    <!-- Edit Note Screen Strings -->
    <string name="edit_note_save">Save Changes</string>
    <string name="edit_change_photo">Tap the photo to change it</string>

    <!-- About Screen Strings -->
    <string name="about_google_attribution">"Click to read Google's Terms and conditions"</string>
    <string name="about_close">Close</string>

    <!-- Settings Screen Strings -->
    <string name="settings_settings">Settings</string>
    <string name="settings_pick_photo">Change Profile Picture</string>
    <string name="settings_reset_password">Reset Password</string>
    <string name="settings_email">Enter email to reset password</string>
    <string name="settings_save">Save</string>

</resources>