<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/action_create_note"
        android:showAsAction="always"
        android:title="@string/menu_create_note"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_refresh"
        android:visible="false"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/action_save"
        android:showAsAction="always"
        android:title="@string/menu_save"
        android:visible="false"/>
    <item
        android:id="@+id/action_cancel"
        android:showAsAction="always"
        android:title="@string/cancel_string"
        android:visible="false"/>
    <item
        android:id="@+id/action_edit"
        android:showAsAction="always"
        android:title="@string/menu_edit"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/action_edit_location"
                android:title="@string/menu_edit_location"/>
            <item
                android:id="@+id/action_edit_note"
                android:title="@string/menu_edit_note"/>
            <item
                android:id="@+id/action_delete_note"
                android:title="@string/menu_delete_note"/>
        </menu>
    </item>

</menu>