<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/create_note_contents_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/create_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F0EA"
            android:hint="@string/create_note_enter_title"
            android:maxLength="80"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:textColor="#AA434343"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/create_note_progressbar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/dividerHorizontal" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_note_title"
            android:layout_marginBottom="67dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/create_note_body"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="#FFFFFF"
                    android:hint="@string/create_note_enter_body"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerHorizontal" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/create_note_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="20dp"
                        android:src="@drawable/plus_sign" />

                    <ImageView
                        android:id="@+id/create_note_photo_close_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/close_sign"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/create_buttons_layout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/create_note_cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="#FFFFFF"
                android:text="@string/cancel_string" />

            <Button
                android:id="@+id/create_note_confirm_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="#FFFFFF"
                android:text="@string/create_note_share" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_above="@id/create_buttons_layout"
            android:background="?android:attr/dividerHorizontal" />
        
    </RelativeLayout>
</RelativeLayout>